# obsidian-cli-inspector

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  .release-please.config.json  .travis.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  REFACTORING.md  REFACTORING_DETAILS.md  RELEASE.md  SKILL.md  cliff.toml  clippy.toml  codecov.yml  commitlint.config.mjs  config.toml.example  coverage.sh  rustfmt.toml  sonar-project.properties  template-config.toml  test-config.toml
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: aur-build.yml  aur-dry-run.yml  aur-unstable-git-build.yml  build.yml  ci.yml  openhands-trigger.yml  pr-tag-cleanup.yml  pr.yml  release-please.yml  release.yml  rust.yml  test.yml
.openhands/microagents/: lint-format-check.md  pr-validation.md
agent/: Cargo.toml
agent/src/: lib.rs
aur/: .sha256  Makefile  Makefile.git  generate-pkgbuild-git.sh  generate-pkgbuild.sh  genrate-pkgbuild.bash
benches/: diagnose.rs
cicd/: calculate_next_version.sh  generate_release_notes.sh  generate_tag.sh
cli/: Cargo.toml  template-config.toml
cli/src/: lib.rs  main.rs
cli/src/commands/: index.rs  init.rs  other.rs  stats.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/chunker/: heading.rs  paragraph.rs
core/src/parser/: markdown.rs  wikilink.rs
docs/: MODULE_GUIDE.md  PHASE2.md  PHASE3.md  PHASE5.md  cli-contract.md  heading-aware-cli-design.md  machine-contract.md  run.md  schema.dbml  structure.md
docs/ADR-10/: phase10-design.md  phase10-quick-spec.md
docs/ADR-11/: phase11-design.md  phase11-quick-spec.md
docs/ADR-12/: phase12-design.md  phase12-quick-spec.md
docs/ADR-13/: phase13-design.md  phase13-quick-spec.md
docs/ADR-5/: phase5-design.md  phase5-prd.md  phase5-quick-spec.md  (+1 more)
e2e/: Makefile
src/: chunker.rs  cli.rs  command_handlers.rs  commands.rs  config.rs  config_setup.rs  db.rs  lib.rs  logger.rs  machine_contract.rs  main.rs  parser.rs  query.rs  scanner.rs  semantic.rs  stub.rs
test-vault/: Book Notes.md  Daily Notes.md  Deep Work.md  Home.md  Ideas.md  Learning Strategies.md  Pomodoro Technique.md  Projects.md  Software Architecture.md  Zettelkasten Method.md
tests/: cli_tests.rs  common.rs  config_tests.rs  database_tests.rs  db_tests.rs  describe_tests.rs  e2e.rs  indexing_tests.rs  links_tests.rs  logger_tests.rs  machine_contract.rs  markdown_parser_tests.rs  parser_tests.rs  scanner_tests.rs  search_tests.rs  tags_tests.rs  wikilink_parser_tests.rs
(+138 files in other folders)
