[package]
name = "obsidian-cli"
version = "0.1.0"
edition = "2021"
authors = ["obsidian-cli contributors"]
description = "Local-first CLI/TUI for indexing and querying Obsidian vaults"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
dirs = "5.0"
chrono = "0.4"

[dev-dependencies]
