[workspace]
resolver = "2"
members = [
    "core",
    "cli",
    "agent",
]

[workspace.package]
version = "0.0.6"
edition = "2021"
authors = ["jingyi zhao"]
description = "Local-first CLI/TUI for indexing and querying Obsidian vaults"
repository = "https://github.com/jingyi-zhao-01/obsidian-cli"
license = "Apache-2.0"
