[package]
name = "obsidian-cli-inspector"
version = "0.2.1"
edition = "2021"
authors = ["jingyi zhao"]
description = "Local-first CLI/TUI for indexing and querying Obsidian vaults"
repository = "https://github.com/jingyi-zhao-01/obsidian-cli-inspector"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
dirs = "5.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"

[[bench]]
name = "diagnose"
harness = false
