
[package]
name = "obsidian-cli-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
dirs = "5.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.10"
